--- a/Geekshop/DjangoGeekShop/mainapp/templates/base_scheme.html
+++ b/Geekshop/DjangoGeekShop/mainapp/templates/base_scheme.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-        <title>{{ title }}</title>
+    <title>{{ title }}</title>
+
 
 
     <!-- Bootstrap core CSS -->
@@ -22,6 +23,8 @@
 </head>
 
 <body>
+<h1>сегодня -> {% now 'd/m/y' %} </h1>
+
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
