Поработал со статическими файлами

--- a/Geekshop/DjangoGeekShop/mainapp/templates/products.html
+++ b/Geekshop/DjangoGeekShop/mainapp/templates/products.html
@@ -1,8 +1,8 @@
 {% extends 'base_scheme.html' %}
-
+{% load static %}
 
 {% block css %}
-<link href="/static/css/products.css" rel="stylesheet">
+<link href="{% static 'css/products.css' %}" rel="stylesheet">
 {% endblock%}
 
 
@@ -62,7 +62,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Adidas-hoodie.png"
+                                 src="{% static 'vendor/img/products/Adidas-hoodie.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -82,7 +82,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Blue-jacket-The-North-Face.png" alt="">
+                                 src="{% static 'vendor/img/products/Blue-jacket-The-North-Face.png' %}" alt="">
                         </a>
                         <div class="card-body">
                             <h4 class="card-title">
@@ -103,7 +103,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png"
+                                 src="{% static 'vendor/img/products/Brown-sports-oversized-top-ASOS-DESIGN.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -123,7 +123,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Black-Nike-Heritage-backpack.png"
+                                 src="{% static 'vendor/img/products/Black-Nike-Heritage-backpack.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -143,7 +143,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Black-Dr-Martens-shoes.png"
+                                 src="{% static 'vendor/img/products/Black-Dr-Martens-shoes.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
@@ -163,7 +163,7 @@
                     <div class="card h-100">
                         <a href="#">
                             <img class="card-img-top"
-                                 src="/static/vendor/img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png"
+                                 src="{% static 'vendor/img/products/Dark-blue-wide-leg-ASOs-DESIGN-trousers.png' %}"
                                  alt="">
                         </a>
                         <div class="card-body">
