--- a/Geekshop/DjangoGeekShop/mainapp/templates/index.html
+++ b/Geekshop/DjangoGeekShop/mainapp/templates/index.html
@@ -1,9 +1,9 @@
 {% extends 'base_scheme.html' %}
-
+{% load static %}
 
 
 {% block css %}
-<link href="/static/css/index.css" rel="stylesheet">
+<link href="{% static 'css/index.css' %}" rel="stylesheet">
 {% endblock %}
 
 
