--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
@@ -22,7 +22,7 @@
                 </div>
 
             </div>
-            <!-- /.col-lg-3 -->
+
 
             <div class="col-lg-9">
 
@@ -56,33 +56,9 @@
                     </a>
                 </div>
 
-                <div class="row">
-                    {% for product in products %}
 
-                        <div class="col-lg-4 col-md-6 mb-4">
-                            <div class="card h-100">
-                                <a href="#">
-                                    <img class="card-img-top"
-                                         src="{{ product.image.url }}"
-                                         alt="">
-                                </a>
-                                <div class="card-body">
-                                    <h4 class="card-title">
-                                        <a href="#">{{ product.name }}</a>
-                                    </h4>
-                                    <h5>{{ product.price }}</h5>
-                                    <p class="card-text">{{ product.description }}</p>
-                                </div>
-                                <div class="card-footer text-center">
-                                    <a href="{% url 'baskets:basket_add' product.id %}" class="btn btn-outline-success">Отправить
-                                        в корзину</a>
-                                </div>
-                            </div>
-                        </div>
-                    {% endfor %}
+                {% include 'mainapp/includes/card.html' %}
 
-
-                </div>
 
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
@@ -110,7 +86,7 @@
         <div class="container">
             <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020</p>
         </div>
-        <!-- /.container -->
+
     </footer>
 {% endblock %}
 
