--- a/PycharmProjects/DjangoGeekShop/authapp/templates/authapp/profile.html
+++ b/PycharmProjects/DjangoGeekShop/authapp/templates/authapp/profile.html
@@ -1,42 +1,39 @@
-{% extends 'mainapp/base_scheme.html' %}
+{% extends 'mainapp/base.html' %}
 {% load static %}
-
-
 
 {% block css %}
     <link href="{% static 'css/profile.css' %}" rel="stylesheet">
 {% endblock %}
 
 
-
 {% block content %}
 
     <div class="container">
+
         <div class="row">
             <div class="col-lg-7">
                 {% if  messages %}
-        <div class="alert {% if messages.level == 25 %} alert-success {% else %} alert-warning {% endif %} alert-dismissible fade show"
-            role="alert"
-            style="margin-top: 50px;">
-        {% if messages %}
-            {% for message in messages %}
-                {{ message }}
-            {% endfor %}
-{#        {% else %}#}
-
-{#            {% for error in form.errors %}#}
-{#                {{ error }}#}
-{#            {% endfor %}#}
-
-        {% endif %}
-    {% endif %}
+                    <div class="alert {% if messages.level == 25 %} alert-success {% else %} alert-warning {% endif %}alert-dismissible fade show"
+                         role="alert"
+                         style="margin-top: 50px;">
+                        {% if messages %}
+                            {% for mes in messages %}
+                                {{ mes }}
+                            {% endfor %}
+                        {% endif %}
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                {% endif %}
                 <h4 class="mt-3 mb-3">Профиль</h4>
                 <div class="col-lg-12 text-center">
                     <img width="100" height="100"
-                         src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'vendor/img/users/default_avatar.jpg' %} {% endif %}"
+                         src="{% if user.image %} {{ user.image.url }} {% else %}{% static 'vendor/img/users/default_avatar.jpg' %}{% endif %}"
+
                          class="img-thumbnail">
                 </div>
-                <form action="{% url 'authapp:profile' %}" method="post" enctype="multipart/form-data">
+                <form action="{% url 'authapp:profile' %} " method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-6">
@@ -65,20 +62,19 @@
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
                             {{ form.username }}
-
                         </div>
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
                                 почты</label>
                             {{ form.email }}
-
                         </div>
+                    </div>
+                    <div class="form-row">
 
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст
                             </label>
                             {{ form.age }}
-
                         </div>
                     </div>
                     <div class="form-row">
@@ -94,4 +90,4 @@
         </div>
     </div>
 {% endblock %}
-</div>
+
