--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/includes/card.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/includes/card.html
@@ -1,5 +1,4 @@
 <div class="card_add_basket">
-
     <div class="row">
         {% for product in products %}
 
@@ -12,7 +11,7 @@
                     </a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">{{ product.name }}</a>
+                            <a href="{% url 'mainapp:detail' product.id %}">{{ product.name }}</a>
                         </h4>
                         <h5>{{ product.price }}</h5>
                         <p class="card-text">{{ product.description }}</p>
