--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
@@ -1,12 +1,11 @@
-{% extends 'mainapp/base_scheme.html' %}
+{% extends 'mainapp/base.html' %}
 {% load static %}
-
 {% block css %}
-    <link href="{% static 'css/products.css' %}" rel="stylesheet">
+    <link href="{% static  'css/products.css' %}" rel="stylesheet">
 {% endblock %}
 
-
 {% block content %}
+
     <div class="container">
 
         <div class="row">
@@ -17,12 +16,11 @@
                 <div class="list-group">
                     {% for category in categories %}
                         <a href="#" class="list-group-item">{{ category.name }}</a>
-
                     {% endfor %}
                 </div>
 
             </div>
-
+            <!-- /.col-lg-3 -->
 
             <div class="col-lg-9">
 
@@ -34,15 +32,15 @@
                     </ol>
                     <div class="carousel-inner" role="listbox">
                         <div class="carousel-item active">
-                            <img class="d-block img-fluid" src="/static/vendor/img/slides/slide-1.jpg"
+                            <img class="d-block img-fluid" src="{% static  'vendor/img/slides/slide-1.jpg' %}"
                                  alt="First slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/static/vendor/img/slides/slide-2.jpg"
+                            <img class="d-block img-fluid" src="{% static  'vendor/img/slides/slide-2.jpg' %}"
                                  alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block img-fluid" src="/static/vendor/img/slides/slide-3.jpg"
+                            <img class="d-block img-fluid" src="{% static  'vendor/img/slides/slide-3.jpg' %}"
                                  alt="Third slide">
                         </div>
                     </div>
@@ -55,11 +53,7 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-
-
-                {% include 'mainapp/includes/card.html' %}
-
-
+                    {% include 'mainapp/includes/card.html' %}
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
                         <li class="page-item disabled">
@@ -79,15 +73,13 @@
         </div>
 
     </div>
+
 {% endblock %}
 
 {% block footer %}
     <footer class="py-5 bg-dark">
         <div class="container">
-            <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2020</p>
+            <p class="m-0 text-center text-white">Copyright &copy; GeekShop 2021</p>
         </div>
-
     </footer>
 {% endblock %}
-
-
