--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-update-delete.html
@@ -1,77 +1,53 @@
-
+{% extends 'admins/base.html' %}
 
 
 {% block content %}
-<div id="layoutSidenav">
-    <div id="layoutSidenav_nav">
-        <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
-            <div class="sb-sidenav-menu">
-                <div class="nav">
-                    <div class="sb-sidenav-menu-heading">Приложения</div>
-                    <a class="nav-link" href="admin-users-read.html">
-                        <div class="sb-nav-link-icon">
-                            <i class="fas fa-users"></i>
-                        </div>
-                        Пользователи
-                    </a>
-                    <a class="nav-link" href="index.html">
-                        <div class="sb-nav-link-icon">
-                            <i class="fas fa-shopping-basket"></i>
-                        </div>
-                        Категории
-                    </a>
-                    <a class="nav-link" href="index.html">
-                        <div class="sb-nav-link-icon">
-                            <i class="fas fa-tshirt"></i>
-                        </div>
-                        Продукты
-                    </a>
-                </div>
-            </div>
-            <div class="sb-sidenav-footer"></div>
-        </nav>
-    </div>
+
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Редактирование пользователя | valeriy</h1>
+                <h1 class="mt-4">Редактирование пользователя | {{ user_elect.username }}</h1>
                 <div class="card-body">
-                    <form action="">
+                    <form action="{% url 'admins:admin_users_update' user_select.id %}" method="post" enctype="multipart/form-data">
+                        {% csrf_token %}
                         <div class="form-row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="small mb-1" for="inputFirstName">Имя</label>
-                                    <input class="form-control py-4" id="inputFirstName" type="text" value="Николай"/>
+                                    <label class="small mb-1" for="inputFirstName{{ form.first_name.id_for_label }}">Имя</label>
+                                    {{ form.first_name }}
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="small mb-1" for="inputLastName">Фамилия</label>
-                                    <input class="form-control py-4" id="inputLastName" type="text" value="Нагорный"/>
+                                    <label class="small mb-1" for="inputLastName{{ form.last_name.id_for_label }}">Фамилия</label>
+                                    {{ form.last_name }}
+
                                 </div>
                             </div>
                         </div>
                         <div class="form-row mb-2">
                             <div class="col-lg-12">
                                 <div class="custom-file">
-                                    <input type="file" class="custom-file-input" id="userAvatar" size="50">
-                                    <label class="custom-file-label" for="userAvatar">Выберите изображение</label>
+                                    {{ form.image }}
+                                    <label class="custom-file-label" for="userAvatar{{ form.image.id_for_label }}">Выберите изображение</label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-row">
                             <div class="col-lg-6">
-                                <label class="small mb-1" for="inputUsername">Имя пользователя</label>
-                                <input class="form-control py-4" id="inputUsername" type="text"
-                                       aria-describedby="usernameHelp"
-                                       value="nikolay"/>
+                                <label class="small mb-1" for="inputUsername{{ form.username.id_for_label }}">Имя пользователя</label>
+                                {{ form.username}}
+
                             </div>
                             <div class="col-lg-6">
-                                <label class="small mb-1" for="inputEmailAddress">Адрес электронной
+                                <label class="small mb-1" for="inputEmailAddress{{ form.email.id_for_label }}">Адрес электронной
                                     почты</label>
-                                <input class="form-control py-4" id="inputEmailAddress" type="email"
-                                       aria-describedby="emailHelp"
-                                       value="isp06@mail.ru"/>
+                                {{ form.email }}
+                            </div>
+                            <div class="col-lg-2">
+                                <label class="small mb-1"
+                                       for="inputEmailAddress{{ form.age.id_for_label }}">Возраст</label>
+                                {{ form.age }}
                             </div>
                         </div>
                         <div class="form-row">
@@ -80,11 +56,14 @@
                             </div>
                         </div>
                     </form>
+                    <form action="{% url 'admins:admin_users_delete' user_select.id %}" method="post">
+                        {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-danger btn-block" type="submit" value="Удалить">
                         </div>
                     </div>
+                    </form>
                 </div>
             </div>
         </main>
@@ -96,5 +75,5 @@
             </div>
         </footer>
     </div>
-</div>
+
 {% endblock %}
