--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/base.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/base.html
@@ -49,13 +49,15 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin/admin.html">
+                        <a class="nav-link" href="{% url 'admins:index' %}">
                             <i class="fas fa-users-cog"></i>
                         </a>
                     </li>
+                    {% if user.is_superuser %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'authapp:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                     </li>
+                        {% endif %}
                 {% endif %}
             </ul>
         </div>
