--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-update-delete.html
@@ -6,9 +6,9 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Редактирование каталога | {{ category_select.name }}</h1>
+                <h1 class="mt-4">Редактирование каталога | {{ productcategory.name }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admins:admin_category_update' category_select.id %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'admins:admin_category_update' productcategory.id %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-lg-6">
@@ -32,14 +32,7 @@
                             </div>
                         </div>
                     </form>
-                    <form action="{% url 'admins:admin_category_delete' category_select.id %}" method="post">
-                        {% csrf_token %}
-                    <div class="row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
-                        </div>
-                    </div>
-                    </form>
+
                 </div>
             </div>
         </main>
