--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-read.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-read.html
@@ -31,7 +31,7 @@
 
                                 <tbody>
 
-                                {% for product in products %}
+                                {% for product in product_list %}
                                     <tr>
                                         <td>{{ product.name }}</td>
                                         <td>{{ product.description }}</td>
@@ -47,13 +47,13 @@
                                             {% endif %}
                                         </td>
                                         <td>
-                                            <form action="{% url 'admins:admin_product_delete' pk=product.id %}" method="post">
+                                            <form action="{% url 'admins:admin_product_delete' product.id %}" method="post">
                                                 {% csrf_token %}
                                                 <input class="btn btn-danger btn-block" type="submit" value="Удалить">
                                             </form>
                                         </td>
                                         <td>
-                                            <a href="{% url 'admins:admin_product_update' pk=product.id %}">
+                                            <a href="{% url 'admins:admin_product_update' product.id %}">
                                                 <input class="btn btn-success btn-block" type="submit" value="Изменить">
                                             </a>
                                         </td>
