--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-update-delete.html
@@ -6,9 +6,9 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Редактирование продукта | {{ product_select.name }}</h1>
+                <h1 class="mt-4">Редактирование продукта | {{ product.name }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admins:admin_product_update' product_select.id %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'admins:admin_product_update' product.id %}" method="post" enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-lg-6">
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                     </form>
-                    <form action="{% url 'admins:admin_users_delete' product_select.id %}" method="post">
+                    <form action="{% url 'admins:admin_users_delete' product.id %}" method="post">
                         {% csrf_token %}
                     <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
