--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-update-delete.html
@@ -1,4 +1,5 @@
 {% extends 'admins/base.html' %}
+{% load static %}
 
 
 {% block content %}
@@ -42,6 +43,10 @@
                                 {{ form.category }}
                             </div>
                         </div>
+                        <div class="col-lg-6">
+                                <img width="430" height="100" style="margin-top: 28px"
+                                     src="{% if product.image %} {{ product.image.url }} {% else %}{% static 'vendor/img/products/product_default.png' %}{% endif %}" class="img-thumbnail">
+                            </div>
                         <div class="form-row">
                             <div class="col-lg-12" style="margin-top: 33px;">
                                 <input class="btn btn-info btn-block" type="submit" value="Сохранить">
