--- a/PycharmProjects/DjangoGeekShop/authapp/templates/authapp/profile.html
+++ b/PycharmProjects/DjangoGeekShop/authapp/templates/authapp/profile.html
@@ -83,19 +83,25 @@
                             {{ profile.gender }}
                         </div>
                     </div>
-                        <div class="form-row">
+                    <div class="col-lg-6">
+                        <label class="small mb-1" for="{{ profile.lang.id_for_label }}">Язык
+                        </label>
+                        {{ profile.lang }}
+                    </div>
 
-                            <div class="col-lg-6">
-                                <label class="small mb-1" for="{{ profile.about.id_for_label }}">О себе
-                                </label>
-                                {{ profile.about }}
-                            </div>
+                    <div class="form-row">
+
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ profile.about.id_for_label }}">О себе
+                            </label>
+                            {{ profile.about }}
                         </div>
-                        <div class="form-row">
-                            <div class="col-lg-12" style="margin-top: 33px;">
-                                <input class="btn btn-info btn-block" type="submit" value="Сохранить">
-                            </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col-lg-12" style="margin-top: 33px;">
+                            <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
+                    </div>
                 </form>
             </div>
             <div class="col-lg-5">
