--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/includes/siberia_bar.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/includes/siberia_bar.html
@@ -1,27 +1,26 @@
-
-
+{% load i18n %}
 <div id="layoutSidenav_nav">
         <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Приложения</div>
-                    <a class="nav-link" href=" {% url 'admins:admin_users' %}">
+                    <a class="nav-link" href="{% url 'admins:admin_users' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-users"></i>
                         </div>
-                        Пользователи
+                        {% translate 'Users' %}
                     </a>
                     <a class="nav-link" href="{% url 'admins:admin_category' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-shopping-basket"></i>
                         </div>
-                        Категории
+                        {% translate 'Categories' %}
                     </a>
-                    <a class="nav-link" href="{% url 'admins:admin_product' %}">
+                    <a class="nav-link" href="{% url 'admins:admins_product' %}">
                         <div class="sb-nav-link-icon">
                             <i class="fas fa-tshirt"></i>
                         </div>
-                        Продукты
+                        {% translate 'Products' %}
                     </a>
                 </div>
             </div>
