--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-read.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-read.html
@@ -5,7 +5,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Категории</h1>
+                <h1 class="mt-4">{{ title }}</h1>
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table mr-1"></i>
@@ -19,14 +19,22 @@
                                     <th>Наименование</th>
                                     <th>Описание</th>
                                     <th>Активный</th>
-
+                                    <th>Удалить</th>
+                                    <th>Изменить</th>
                                 </tr>
                                 </thead>
-
-
+                                <tfoot>
+                                <tr>
+                                    <th>Наименование</th>
+                                    <th>Описание</th>
+                                    <th>Активный</th>
+                                    <th>Удалить</th>
+                                    <th>Изменить</th>
+                                </tr>
+                                </tfoot>
                                 <tbody>
 
-                                {% for category in productcategory_list %}
+                                {% for category in object_list %}
                                     <tr>
                                         <td>{{ category.name }}</td>
                                         <td>{{ category.description }}</td>
