--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-category-update-delete.html
@@ -6,33 +6,34 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Редактирование каталога | {{ productcategory.name }}</h1>
+                <h1 class="mt-4">Редактирование категории | {{ productcategory.name }}  </h1>
                 <div class="card-body">
-                    <form action="{% url 'admins:admin_category_update' productcategory.id %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'admins:admin_category_update' productcategory.id %}" method="post">
+
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="small mb-1" for="{{ form.name.id_for_label }}">Название</label>
+                                    <label class="small mb-1" for="{{ form.name.id_for_label }}">Наименование</label>
                                     {{ form.name }}
                                 </div>
                             </div>
+                        </div>
+                        <div class="form-row">
                             <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="small mb-1" for="{{ form.description.id_for_label }}">Описание</label>
                                     {{ form.description }}
-
                                 </div>
                             </div>
                         </div>
 
+
                         <div class="form-row">
-                            <div class="col-lg-12" style="margin-top: 33px;">
+                            <div class="col-lg-6" style="margin-top: 33px;">
                                 <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                             </div>
                         </div>
-                    </form>
-
                 </div>
             </div>
         </main>
