--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-read.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-product-read.html
@@ -5,7 +5,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">Продукты</h1>
+                <h1 class="mt-4">{{ title }}</h1>
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table mr-1"></i>
@@ -18,42 +18,55 @@
                                 <tr>
                                     <th>Наименование</th>
                                     <th>Описание</th>
+                                    <th>Категория</th>
                                     <th>Цена</th>
                                     <th>Количество</th>
-                                    <th>Категория</th>
                                     <th>Активный</th>
                                     <th>Удалить</th>
                                     <th>Изменить</th>
-
                                 </tr>
                                 </thead>
-
-
+                                <tfoot>
+                                <tr>
+                                    <th>Наименование</th>
+                                    <th>Описание</th>
+                                    <th>Категория</th>
+                                    <th>Цена</th>
+                                    <th>Количество</th>
+                                    <th>Активный</th>
+                                    <th>Удалить</th>
+                                    <th>Изменить</th>
+                                </tr>
+                                </tfoot>
                                 <tbody>
 
-                                {% for product in product_list %}
+                                {% for product in object_list %}
                                     <tr>
                                         <td>{{ product.name }}</td>
                                         <td>{{ product.description }}</td>
+                                        <td>{{ product.category }}</td>
                                         <td>{{ product.price }}</td>
                                         <td>{{ product.quantity }}</td>
-                                        <td>{{ product.category }}</td>
+
                                         <td class="text-center">
                                             {% if product.is_active %}
                                                 <i class="fas fa-check-circle"></i>
                                             {% else %}
+
                                                 <i class="fas fa-times-circle"></i>
                                             {% endif %}
                                         </td>
                                         <td>
-                                            <form action="{% url 'admins:admin_product_delete' product.id %}" method="post">
+                                            <form action="{% url 'admins:admins_product_delete' product.id %}"
+                                                  method="post">
                                                 {% csrf_token %}
                                                 <input class="btn btn-danger btn-block" type="submit" value="Удалить">
                                             </form>
                                         </td>
                                         <td>
-                                            <a href="{% url 'admins:admin_product_update' product.id %}">
-                                                <input class="btn btn-success btn-block" type="submit" value="Изменить">
+
+                                            <a href="{% url 'admins:admins_product_update' product.id %}">
+                                                 <input class="btn btn-success btn-block" type="submit" value="Изменить">
                                             </a>
                                         </td>
                                     </tr>
@@ -63,7 +76,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="{% url 'admins:admin_product_create' %}">
+                        <a href="{% url 'admins:admins_product_create' %}">
                             <button class="btn btn-success">Создать продукт</button>
                         </a>
                     </div>
