--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-create.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-create.html
@@ -1,55 +1,56 @@
 {% extends 'admins/base.html' %}
+
 {% block content %}
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">{{ title }}</h1>
-                <form action="{% url 'admins:admin_users_create'%}" method="post" enctype="multipart/form-data">
+                <h1 class="mt-4">Создание пользователя</h1>
+                <form action="{% url 'admins:admin_users_create' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputFirstName{{ form.first_name.id_for_label }}">Имя</label>
-                                {{ form.first_name }}
+                                <label class="small mb-1" for=" {{ form.first_name.id_for_label }}">Имя</label>
+                               {{ form.first_name }}
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div class="form-group">
-                                <label class="small mb-1" for="inputLastName{{ form.last_name.id_for_label }}">Фамилия</label>
-                                {{form.last_name}}
+                                <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
+                                {{ form.last_name }}
                             </div>
                         </div>
                     </div>
                     <div class="form-row mb-2">
                         <div class="col-lg-12">
                             <div class="custom-file">
-                                {{ form.image }}
-                                <label class="custom-file-label" for="userAvatar{{ form.image.id_for_label }}">Выберите изображение</label>
+                                  {{ form.image }}
+                                <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите изображение</label>
                             </div>
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-lg-5">
-                            <label class="small mb-1" for="inputUsername{{ form.username.id_for_label }}">Имя пользователя</label>
-                            {{ form.username }}
+                            <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
+                           {{ form.username }}
                         </div>
                         <div class="col-lg-5">
-                            <label class="small mb-1" for="inputEmailAddress{{ form.email.id_for_label }}">Адрес электронной
+                            <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
                                 почты</label>
                             {{ form.email }}
                         </div>
                         <div class="col-lg-2">
-                            <label class="small mb-1" for="inputEmailAddress{{ form.age.id_for_label }}">Возраст</label>
+                            <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
                             {{ form.age }}
                         </div>
                     </div>
                     <div class="form-row">
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="inputPassword1{{ form.password1.id_for_label }}">Пароль</label>
+                            <label class="small mb-1" for="{{ form.password1.id_for_label }}">Пароль</label>
                             {{ form.password1 }}
                         </div>
                         <div class="col-lg-6">
-                            <label class="small mb-1" for="inputPassword2{{ form.password2.id_for_label }}">Повторите пароль</label>
+                            <label class="small mb-1" for="{{ form.password2.id_for_label }}">Повторите пароль</label>
                             {{ form.password2 }}
                         </div>
                     </div>
