--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-read.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-read.html
@@ -4,7 +4,7 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">{{ title }}</h1>
+                <h1 class="mt-4">Пользователи</h1>
                 <div class="card mb-4">
                     <div class="card-header">
                         <i class="fas fa-table mr-1"></i>
@@ -23,31 +23,34 @@
                                     <th>Активный</th>
                                 </tr>
                                 </thead>
+
                                 <tbody>
-                                {%  for user in user_list %}
-                                <tr>
-                                    <td><a href="{% url 'admins:admin_users_update' user.id %}" style="color: dodgerblue">{{ user.username }}</a>
-                                    </td>
-                                    <td>{{ user.first_name }}</td>
-                                    <td>{{ user.last_name }}</td>
-                                    <td>{{ user.email }}</td>
-                                    <td class="text-center">
+                                {% for user in object_list %}
+                                    <tr>
+                                        <td><a href="{% url 'admins:admin_users_update' user.id %}"
+                                               style="color: dodgerblue">{{ user.username }}</a></td>
+                                        <td>{{ user.first_name }}</td>
+                                        <td>{{ user.last_name }}</td>
+                                        <td>{{ user.email }}</td>
+                                        <td class="text-center">
                                             {% if user.is_staff %}
-                                            <i class="fas fa-check-circle"></i>
+                                                <i class="fas fa-check-circle"></i>
                                             {% else %}
                                                 <i class="fas fa-times-circle"></i>
-                                        {% endif %}
-                                    </td>
-                                    <td class="text-center">
+                                            {% endif %}
+
+                                        </td>
+
+
+                                        <td class="text-center">
 
                                             {% if user.is_active %}
-                                            <i class="fas fa-check-circle"></i>
+                                                <i class="fas fa-check-circle"></i>
                                             {% else %}
                                                 <i class="fas fa-times-circle"></i>
-                                        {% endif %}
-
-                                    </td>
-                                </tr>
+                                            {% endif %}
+                                        </td>
+                                    </tr>
                                 {% endfor %}
                                 </tbody>
                             </table>
