--- a/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-update-delete.html
+++ b/PycharmProjects/DjangoGeekShop/admins/templates/admins/admin-users-update-delete.html
@@ -1,27 +1,26 @@
 {% extends 'admins/base.html' %}
 
-
 {% block content %}
 
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid">
-                <h1 class="mt-4">{{ title }} | {{ user.username }}</h1>
+                <h1 class="mt-4">Редактирование пользователя | {{ user.username }}</h1>
                 <div class="card-body">
-                    <form action="{% url 'admins:admin_users_update' user.id %}" method="post" enctype="multipart/form-data">
+                    <form action="{% url 'admins:admin_users_update' user.id %}" method="post"
+                          enctype="multipart/form-data">
                         {% csrf_token %}
                         <div class="form-row">
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="small mb-1" for="inputFirstName{{ form.first_name.id_for_label }}">Имя</label>
+                                    <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
                                     {{ form.first_name }}
                                 </div>
                             </div>
                             <div class="col-lg-6">
                                 <div class="form-group">
-                                    <label class="small mb-1" for="inputLastName{{ form.last_name.id_for_label }}">Фамилия</label>
+                                    <label class="small mb-1" for="{{ form.last_name.id_for_label }}">Фамилия</label>
                                     {{ form.last_name }}
-
                                 </div>
                             </div>
                         </div>
@@ -29,24 +28,24 @@
                             <div class="col-lg-12">
                                 <div class="custom-file">
                                     {{ form.image }}
-                                    <label class="custom-file-label" for="userAvatar{{ form.image.id_for_label }}">Выберите изображение</label>
+                                    <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите
+                                        изображение</label>
                                 </div>
                             </div>
                         </div>
                         <div class="form-row">
-                            <div class="col-lg-5">
-                                <label class="small mb-1" for="inputUsername{{ form.username.id_for_label }}">Имя пользователя</label>
-                                {{ form.username}}
-
+                            <div class="col-lg-6">
+                                <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя
+                                    пользователя</label>
+                                {{ form.username }}
                             </div>
-                            <div class="col-lg-5">
-                                <label class="small mb-1" for="inputEmailAddress{{ form.email.id_for_label }}">Адрес электронной
+                            <div class="col-lg-6">
+                                <label class="small mb-1" for="{{ form.email.id_for_label }}">Адрес электронной
                                     почты</label>
                                 {{ form.email }}
                             </div>
                             <div class="col-lg-2">
-                                <label class="small mb-1"
-                                       for="inputEmailAddress{{ form.age.id_for_label }}">Возраст</label>
+                                <label class="small mb-1" for="{{ form.age.id_for_label }}">Возраст</label>
                                 {{ form.age }}
                             </div>
                         </div>
@@ -58,11 +57,11 @@
                     </form>
                     <form action="{% url 'admins:admin_users_delete' user.id %}" method="post">
                         {% csrf_token %}
-                    <div class="row">
-                        <div class="col-lg-12" style="margin-top: 33px;">
-                            <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                        <div class="row">
+                            <div class="col-lg-12" style="margin-top: 33px;">
+                                <input class="btn btn-danger btn-block" type="submit" value="Удалить">
+                            </div>
                         </div>
-                    </div>
                     </form>
                 </div>
             </div>
