--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/base.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/base.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
 
     <title>{{ title }}</title>
-
+    <meta name="csrf-token" content="{{ csrf_token }}">
 
     <!-- Bootstrap core CSS -->
     <link href="{% static  'vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
@@ -43,6 +43,7 @@
                                 class="fas fa-sign-in-alt"></i></a>
                     </li>
                 {% else %}
+
                     <li class="nav-item">
                         <div class="dropdown">
                             <a class="nav-link dropdown-toggle" href="" data-toggle="dropdown">
@@ -62,17 +63,18 @@
                                 </li>
                             </ul>
                         </div>
-                    {% if user.is_superuser %}
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'admins:index' %}">
-                            <i class="fas fa-users-cog"></i>
-                        </a>
-                    </li>
-                    {% endif %}
+
+
+                        {% if user.is_superuser %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{% url 'admins:index' %}">
+                                    <i class="fas fa-users-cog"></i>
+                                </a>
+                            </li>
+                        {% endif %}
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'authapp:logout' %}">Выйти <i class="fas fa-sign-out-alt"></i></a>
                     </li>
-
                 {% endif %}
             </ul>
         </div>
