--- a/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
+++ b/PycharmProjects/DjangoGeekShop/mainapp/templates/mainapp/products.html
@@ -15,7 +15,8 @@
                 <h1 class="my-4">GeekShop</h1>
                 <div class="list-group">
                     {% for category in categories %}
-                        <a href="{% url 'mainapp:category' category.id %}" class="list-group-item">{{ category.name }}</a>
+                        <a href="{% url 'mainapp:category' category.id %}"
+                           class="list-group-item">{{ category.name }}</a>
                     {% endfor %}
                 </div>
 
@@ -53,24 +54,31 @@
                         <span class="sr-only">Next</span>
                     </a>
                 </div>
-                    {% include 'mainapp/includes/card.html' %}
+                {% include 'mainapp/includes/card.html' %}
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center">
+
+
                         <li class="page-item {% if not products.has_previous %} disabled{% endif %}">
                             <a class="page-link"
                                href="{% if products.has_previous %} {% url 'mainapp:page' products.previous_page_number %} {% endif %}"
                                tabindex="-1" aria-disabled="true">Previous</a>
                         </li>
 
-                            {% for page in products.paginator.page_range %}
-                                <li class="page-item">
-                            <a class="page-link" href="{% url 'mainapp:page' page %}">{{ page }}</a>
 
-                            {% endfor %}
 
-                        <li class="page-item{% if not products.has_next %} disabled {% endif %}">
+                        {% for page in products.paginator.page_range %}
+                            <li class="page-item">
+                                <a class="page-link" href="{% url 'mainapp:page' page %}">{{ page }}</a>
+                            </li>
+                        {% endfor %}
+
+
+
+                        <li class="page-item {% if not products.has_next %} disabled {% endif %}">
                             <a class="page-link"
-                               href="{% if products.has_next %} {% url 'mainapp:page' products.next_page_number %} {% endif %}">Next</a>
+                               href="{% if products.has_next %} {% url 'mainapp:page' products.next_page_number %} {% endif %}"
+                               tabindex="-1" aria-disabled="true">Next</a>
                         </li>
 
 
